--- a/Cuadernos/1 Propuesta_Proyecto.ipynb
+++ b/Cuadernos/1 Propuesta_Proyecto.ipynb
@@ -146,15 +146,17 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "NmTotcexvFqK"
       },
       "source": [
-        "# Técnicas de modelación propuestas"
+        "# **Técnicas de modelación propuestas**"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "sjMRbT6O_XZ6"
@@ -162,16 +164,17 @@
       "source": [
         "- Técnicas de lenguaje natural.\n",
         "- Técnicas de clústering.\n",
-        "- Extracción de las palabras"
+        "- Extracción de las palabras."
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Z4H0PH0TvJ30"
       },
       "source": [
-        "# Conocimientos requeridos para el desarrollo del proyecto"
+        "# **Conocimientos requeridos para el desarrollo del proyecto**"
       ]
     },
     {
@@ -183,25 +186,27 @@
       "source": [
         "- Python: nivel medio.\n",
         "- Librería Selenium.\n",
-        "- Modelos supervisados: explicativos o predictivos."
+        "- Modelos supervisados explicativos."
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "XXrTK5kOvOwM"
       },
       "source": [
-        "# Resultados esperados"
+        "# **Resultados esperados**"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "IJLKT9a1-aBp"
       },
       "source": [
-        "Visualización sobre el perfil pedido por las bolsas de empleo en Colombia para aplicar a un puesto de analista o cientifico(a) de datos, agrupaciones por peso de estas variables."
+        "Visualización sobre el perfil pedido por las bolsas de empleo en Colombia para aplicar a un puesto de analista, agrupaciones por peso de estas variables."
       ]
     },
     {
@@ -219,9 +224,18 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:27:35) [Clang 14.0.6 ]"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "a8aa123d2556147b34ffb34d860818176d4f0d003d0e6ca22f9b0092c363bea8"
+      }
     }
   },
   "nbformat": 4,
