--- a/Cuadernos/3 Traducción_Datos.ipynb
+++ b/Cuadernos/3 Traducción_Datos.ipynb
@@ -3,6 +3,15 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "24d90ab7",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/vcardonas/linkedin-project/blob/main/Cuadernos/3%20Traducci%C3%B3n_Datos.ipynb)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "643905ba",
    "metadata": {},
    "source": [
