--- a/Cuadernos/2 WebScraping_LinkedIn.ipynb
+++ b/Cuadernos/2 WebScraping_LinkedIn.ipynb
@@ -3,6 +3,14 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/vcardonas/linkedin-project/blob/main/Cuadernos/2%20WebScraping_LinkedIn.ipynb#scrollTo=643905ba)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "643905ba",
    "metadata": {},
    "source": [
@@ -1334,8 +1342,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:27:35) [Clang 14.0.6 ]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
