--- a/Cuadernos/1 Propuesta_Proyecto.ipynb
+++ b/Cuadernos/1 Propuesta_Proyecto.ipynb
@@ -3,6 +3,14 @@
     {
       "attachments": {},
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/vcardonas/linkedin-project/blob/main/Cuadernos/1%20Propuesta_Proyecto.ipynb)"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
       "id": "643905ba",
       "metadata": {},
       "source": [
