--- a/Cuadernos/1 Propuesta_Proyecto.ipynb
+++ b/Cuadernos/1 Propuesta_Proyecto.ipynb
@@ -25,17 +25,7 @@
         "id": "HBbC_-c7t8H_"
       },
       "source": [
-        "***Por: Valentina Cardona y Juan David Ricaurte***"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Im0JVIzduoxx"
-      },
-      "source": [
-        "***Asesor: Alvaro Montenegro***"
+        "***Por: Valentina Cardona (vcardonas@unal.edu.co)***"
       ]
     },
     {
